force-app/main/default/objects/Fit_Score_Mapping__mdt/Fit_Score_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>MIS-6878 - Outputs values for missing fields on Lead/Contact
Used in Flows:
Contact - FitScore Calculation
Lead - FitScore Calculation</description>
    <label>Fit Score Mapping</label>
    <pluralLabel>Fit Score Mappinga</pluralLabel>
</CustomObject>