force-app/main/default/objects/Fit_Score_Mapping__mdt/fields/Pre_Mapped_Industry__c.field-meta.xml
<CustomField>
    <fullName>Pre_Mapped_Industry__c</fullName>
    <label>Pre Mapped Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>