force-app/main/default/objects/Fit_Score_Mapping__mdt/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <label>Seniority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>