force-app/main/default/objects/Fit_Score_Mapping__mdt/fields/SW_Industry__c.field-meta.xml
<CustomField>
    <fullName>SW_Industry__c</fullName>
    <label>SW Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>